--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,13 @@ body::-webkit-scrollbar {
   display: inline-block;
   text-align: center;
   max-width: 167px;
-  width: 100%
+  width: 100%;
+  -webkit-transition: background-color .3s ease;
+  transition: background-color .3s ease;
+}
+
+.button:hover {
+  background-color: #3051db;
 }
 
 .button.button-inverted {
@@ -295,7 +301,8 @@ body::-webkit-scrollbar {
 .splash h1 {
   font-family: Barlow-Bold, Arial, Helvetica, sans-serif;
   font-size: 80px;
-  color: #6b05a8
+  color: #6b05a8;
+  font-weight: 400;
 }
 
 @media only screen and (min-width: 1025px) {
@@ -564,8 +571,14 @@ body::-webkit-scrollbar {
   background-color: #4d5ee0;
   color: #fff;
   text-align: center;
-  line-height: 63px;
-  cursor: pointer
+  line-height: 72px;
+  cursor: pointer;
+  -webkit-transition: background-color .3s ease;
+  transition: background-color .3s ease;
+}
+
+.slider .slider-arrows .arrow:hover {
+  background-color: #78A1FC;
 }
 
 @media only screen and (max-width: 480px) {
@@ -601,7 +614,7 @@ body::-webkit-scrollbar {
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .slider .slide .video-wrapper {
-    margin: 30px 0 40px
+    margin: 30px 0 25px;
   }
 }
 
@@ -632,7 +645,9 @@ body::-webkit-scrollbar {
 .slider .slide .col-left .text-wrapper h1 {
   font-family: Barlow-Bold, Arial, Helvetica, sans-serif;
   font-size: 80px;
-  color: #6b05a8
+  color: #6b05a8;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 400;
 }
 
 @media only screen and (min-width: 1025px) {
@@ -688,7 +703,7 @@ body::-webkit-scrollbar {
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .slider .slide .col-right .button {
-    margin-top: 45px
+    margin-top: 5px;
   }
 }
 
