--- a/assets/css/la-style.css
+++ b/assets/css/la-style.css
@@ -8,19 +8,16 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
 .splash.purple * {transition:none!important;}
 
 .pop-trigger {display: block;}
-
-.sidebar .pop-trigger {
-  margin-bottom: 25px;
-}
-
-.sidebar-wrapper .sidebar .white-section .sidebar-video-wrapper p {
-  margin-bottom: 25px;
-}
+.sidebar .pop-trigger {margin-bottom: 25px; }
+.sidebar-wrapper .sidebar .white-section .sidebar-video-wrapper p {margin-bottom: 25px; }
 .pop-trigger>img {display: block;cursor: pointer;max-width: 100%;height: auto;}
-.fitb-pop {position: fixed;top: 50%;left: 50%;width: 101vw;height: 101vh;-webkit-transform: translate(-50%, -10%);background: rgba(0,0,0,.75);z-index: 999999;padding: 40px;display: flex;flex-direction: column;align-items: center;display: none;}
+.fitb-pop {position: fixed;top: 50%;left: 50%;width: 101vw;height: 101vh;-webkit-transform: translate(-50%, -130px);background: rgba(0,0,0,.75);z-index: 999999;padding: 40px;display: flex;flex-direction: column;align-items: center;display: none;}
 .sidebar .fitb-pop {-webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 .active .fitb-pop {display: flex; }
-.fitb-pop>div {margin: auto 0; width: 100%; max-width: 750px; padding: 0!important; height: 422px; max-height: calc( ( 100vw - 80px ) * .5625 ); }
+.fitb-pop>div:not(.fitb-close) {margin: auto 0; width: 100%; max-width: 750px; padding: 0!important; height: 422px; max-height: calc( ( 100vw - 80px ) * .5625 ); }
+
+.fitb-close {position: absolute;top: 24px;right: 35px;height: auto;width: 20px;cursor: pointer;}
+.fitb-close>img {display: block; width: 100%; height: auto; }
 
 .background-video {position: absolute; z-index: -1; bottom: 0; width: 100%; height: auto; }
 .nav .nav-item .nav-link:hover {color: #545C69; }
@@ -45,7 +42,11 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
   18%{box-shadow:0 0 0 10px rgba(245,166,36,0.2)}
   50%{box-shadow:0 0 0 70px rgba(245,166,36,0)}
 }
-
+/*@media screen and (min-width: 1025px) {
+  .home .col-wrapper {flex-direction: column; height: 460px; }
+  .home .col-wrapper .col {max-width: 50%; padding-left: 100px; box-sizing: border-box; }
+  .nav .nav-item {flex: auto; }
+}*/
 @media screen and (max-width: 1024px) {
   .fitb-pop {-webkit-transform: translate(-50%, -44%);}
 }
