--- a/assets/css/la-style.css
+++ b/assets/css/la-style.css
@@ -21,6 +21,7 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
 
 .background-video {position: absolute; z-index: -1; bottom: 0; width: 100%; height: auto; }
 .nav .nav-item .nav-link:hover {color: #545C69; }
+.industry .main-title-wrapper {padding-top: 50px; }
 
 @-webkit-keyframes pulse-before{
   0%{box-shadow:0 0 0 0 rgba(245,166,36,0.4)}
