--- a/assets/css/la-style.css
+++ b/assets/css/la-style.css
@@ -48,6 +48,14 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
   .home .col-wrapper .col {max-width: 50%; padding-left: 100px; box-sizing: border-box; }
   .nav .nav-item {flex: auto; }
 }*/
+@media screen and (min-width: 1025px) {
+  .home .col.col-full.nav.title-nav {margin-top: 120px;padding-left: 0px;}
+  .home>.splash-inner>.col-wrapper {flex-direction: column; max-height: 630px; }
+  .home>.splash-inner>.col-wrapper>div {width: 50%; }
+  .splash-inner .nav .nav-item {flex: auto; max-width: 140px; flex-grow: 0; margin-right: 33px; }
+  .splash-inner .nav .nav-item:last-child {margin-right: 0; }
+  .splash-inner .nav .nav-list {justify-content: flex-end; }
+}
 @media screen and (max-width: 1024px) {
   .fitb-pop {-webkit-transform: translate(-50%, -44%);}
 }
