--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,7 +562,8 @@ body::-webkit-scrollbar {
   position: absolute;
   right: 0;
   display: flex;
-  flex-direction: row
+  flex-direction: row;
+  display: none;
 }
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
