--- a/assets/css/la-style.css
+++ b/assets/css/la-style.css
@@ -49,12 +49,21 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
   .nav .nav-item {flex: auto; }
 }*/
 @media screen and (min-width: 1025px) {
-  .home .col.col-full.nav.title-nav {margin-top: 120px;padding-left: 0px;}
+  .home .splash-inner .col.col-full.nav.title-nav {margin-top: 120px;padding-left: 0px;}
   .home>.splash-inner>.col-wrapper {flex-direction: column; max-height: 630px; }
   .home>.splash-inner>.col-wrapper>div {width: 50%; }
   .splash-inner .nav .nav-item {flex: auto; max-width: 140px; flex-grow: 0; margin-right: 33px; }
   .splash-inner .nav .nav-item:last-child {margin-right: 0; }
   .splash-inner .nav .nav-list {justify-content: flex-end; }
+
+  .slider-inner .slide.col-wrapper {padding-left: 190px;margin-top: 60px;}
+  .slider-inner .nav.title-nav {position: absolute;top: 15px;left: 0;width: 180px;}
+  .slider-inner .nav.title-nav .nav-list {flex-direction: column; }
+  .slider-inner .nav.title-nav .nav-list>li {flex: auto;margin-top: 35px;}
+  .slider-inner .nav.title-nav .nav-list>li:first-child {margin-top: 0; }
+  .slider-inner .nav.title-nav + .col-right {padding-left: 5px;/* margin-top: -280px; */position: absolute;width: 35%;padding-top: 120px;}
+  .slider-inner .slide.col-wrapper .col-right:nth-child(2) {padding-left: 30px; }
+  .slider .slide .col-right .button {margin-top: 28px;}
 }
 @media screen and (max-width: 1024px) {
   .fitb-pop {-webkit-transform: translate(-50%, -44%);}
